[package]
name = "node-monitor"
version = "0.1.2"
edition = "2021"
description = "A simple program that monitors the state of a ipfs node. Node is either synced, catching up or has stopped syncing."
authors = ["Spencer <spencer@dartroom.xyz>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
config = {version = "0.13.3",features = ["json"]}
serde_json = {version = "1.0.93",features = ['std']}
serde = "1.0.152"
tokio = {version= "1.25.0", features=['fs']}
chrono = "0.4.23"
reqwest = {version = "0.11.14", features = ["json"] }
anyhow = "1.0.69"
lazy_static = "1.4.0"
futures = "0.3.26"
clap = {version = "4.1.6",features = ["derive"]}
env_logger = { version = "0.10.0", features = ["auto-color"] }
log = "0.4.17"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] } 

